postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: postgres
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: postgres.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql
            port:
              number: 5432
